--- a/angular.json
+++ b/angular.json
@@ -4,73 +4,60 @@
   "newProjectRoot": "projects",
   "projects": {
     "angular-i18n-localazy-demo": {
-      "i18n": {
-        "sourceLocale": "en",
-        "locales": {
-          "cs": {
-            "translation": "src/locale/cs.xliff"
-          }
-        }
-      },
       "projectType": "application",
-      "schematics": {
-        "@schematics/angular:application": {
-          "strict": true
-        }
-      },
+      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
         "build": {
-          "builder": "@angular-devkit/build-angular:browser",
+          "builder": "@angular/build:application",
           "options": {
-            "outputPath": "dist/angular-i18n-localazy-demo",
-            "index": "src/index.html",
-            "main": "src/main.ts",
-            "polyfills": "src/polyfills.ts",
+            "browser": "src/main.ts",
+            "polyfills": [
+              "zone.js",
+              "@angular/localize/init"
+            ],
             "tsConfig": "tsconfig.app.json",
-            "aot": true,
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              {
+                "glob": "**/*",
+                "input": "public"
+              }
             ],
             "styles": [
               "src/styles.css"
-            ],
-            "scripts": []
+            ]
           },
           "configurations": {
             "production": {
-              "fileReplacements": [
-                {
-                  "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
-                }
-              ],
-              "optimization": true,
-              "outputHashing": "all",
-              "sourceMap": false,
-              "namedChunks": false,
-              "extractLicenses": true,
-              "vendorChunk": false,
-              "buildOptimizer": true,
               "budgets": [
                 {
                   "type": "initial",
-                  "maximumWarning": "500kb",
-                  "maximumError": "1mb"
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
                 },
                 {
                   "type": "anyComponentStyle",
-                  "maximumWarning": "2kb",
-                  "maximumError": "4kb"
+                  "maximumWarning": "4kB",
+                  "maximumError": "8kB"
                 }
-              ]
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
             },
             "cs": {
               "localize": [
                 "cs"
+              ]
+            },
+            "es": {
+              "localize": [
+                "es"
               ]
             },
             "en": {
@@ -78,77 +65,68 @@
                 "en"
               ]
             }
-          }
+          },
+          "defaultConfiguration": "production"
         },
         "serve": {
-          "builder": "@angular-devkit/build-angular:dev-server",
-          "options": {
-            "browserTarget": "angular-i18n-localazy-demo:build"
-          },
+          "builder": "@angular/build:dev-server",
           "configurations": {
             "production": {
-              "browserTarget": "angular-i18n-localazy-demo:build:production"
+              "buildTarget": "angular-i18n-localazy-demo:build:production"
+            },
+            "development": {
+              "buildTarget": "angular-i18n-localazy-demo:build:development"
             },
             "en": {
-              "browserTarget": "angular-i18n-localazy-demo:build:en",
+              "buildTarget": "angular-i18n-localazy-demo:build:en",
               "port": 4200
             },
             "cs": {
-              "browserTarget": "angular-i18n-localazy-demo:build:cs",
+              "buildTarget": "angular-i18n-localazy-demo:build:cs",
               "port": 4201
+            },
+            "es": {
+              "buildTarget": "angular-i18n-localazy-demo:build:es",
+              "port": 4202
             }
-          }
+          },
+          "defaultConfiguration": "development"
         },
         "extract-i18n": {
-          "builder": "@angular-devkit/build-angular:extract-i18n",
-          "options": {
-            "browserTarget": "angular-i18n-localazy-demo:build"
-          }
+          "builder": "@angular/build:extract-i18n"
         },
         "test": {
-          "builder": "@angular-devkit/build-angular:karma",
+          "builder": "@angular/build:karma",
           "options": {
-            "main": "src/test.ts",
-            "polyfills": "src/polyfills.ts",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing",
+              "@angular/localize/init"
+            ],
             "tsConfig": "tsconfig.spec.json",
-            "karmaConfig": "karma.conf.js",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              {
+                "glob": "**/*",
+                "input": "public"
+              }
             ],
             "styles": [
               "src/styles.css"
-            ],
-            "scripts": []
-          }
-        },
-        "lint": {
-          "builder": "@angular-devkit/build-angular:tslint",
-          "options": {
-            "tsConfig": [
-              "tsconfig.app.json",
-              "tsconfig.spec.json",
-              "e2e/tsconfig.json"
-            ],
-            "exclude": [
-              "**/node_modules/**"
             ]
           }
-        },
-        "e2e": {
-          "builder": "@angular-devkit/build-angular:protractor",
-          "options": {
-            "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "angular-i18n-localazy-demo:serve"
+        }
+      },
+      "i18n": {
+        "sourceLocale": "en",
+        "locales": {
+          "cs": {
+            "translation": "src/locale/cs.xliff"
           },
-          "configurations": {
-            "production": {
-              "devServerTarget": "angular-i18n-localazy-demo:serve:production"
-            }
+          "es": {
+            "translation": "src/locale/es.xliff"
           }
         }
       }
     }
-  },
-  "defaultProject": "angular-i18n-localazy-demo"
+  }
 }
